#9 Implements POST /users
